# fastapi-skeleton

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  gunicorn_conf.py  main.py  practice.py  pyproject.toml
core/: database.py  exception_handler.py  logger.py  settings.py
middlewares/: logger_middleware.py
repos/: example_repo.py
routers/operations/: healthcheck.py  home.py
routers/v1/: example_router.py
schemas/: example_schema.py
services/: example_service.py
utils/: value_util.py
