[project]
name = "fastapi-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.124.4",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "py-healthcheck>=1.10.1",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
    "uvloop>=0.22.1",
]
