[tool.ruff]
src = ["backend"]
target-version = "py313"

[tool.ruff.lint]
# E: 错误, F: 逻辑缺陷, I: 排序, B: 避坑, UP: 语法升级
select = ["E", "F", "I", "B", "D", "UP"]
ignore = []

[tool.ruff.lint.isort]
extend-select = ["E501"]
# 告诉 Ruff，backend 是你自己的模块，不要把它当成第三方库
known-first-party = ["backend"]

[project]
name = "fastapi-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.124.4",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "pwdlib[argon2]>=0.3.0",
    "py-healthcheck>=1.10.1",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.45",
    "uuid6>=2025.0.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
